--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,5 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -14,7 +9,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #1c1c1c;
+    --background: #0a0708;
     --foreground: #ededed;
   }
 }
